plugins {
	id 'org.springframework.boot' version '2.7.5'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
	id 'java'
}

group = 'com.mircolink'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
	mavenLocal()
	mavenCentral()
	maven {
		url "https://releases.aspose.com/java/repo/"
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'com.aspose:aspose-words:22.10:jdk17'
	implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
	runtimeOnly 'com.h2database:h2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
	useJUnitPlatform()
}

test{
	minHeapSize = "128m" // initial heap size
	maxHeapSize = "4g" // maximum heap size
	jvmArgs '-XX:MaxPermSize=2g' // mem argument for the test JVM
}
